# mcs-presentation

./: README.md  agent_example.py  blog_post_the_future_of_artificial_intelligence_in_healthcare.txt  llm_example.py  ml_example.py  pyproject.toml
docker/: Dockerfile  config.yml  docker-compose.yml  requirements.txt  startup.py
mcs_presentation.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
